Bugfix/kitosudv 5480 help text dialog overflow (#293)
* scrollable help-text dialog

* dialog-footer mixin

* comment

--- a/src/app/modules/organization/organization-users/create-user-dialog/create-user-dialog.component.scss
+++ b/src/app/modules/organization/organization-users/create-user-dialog/create-user-dialog.component.scss
@@ -1,4 +1,7 @@
 @import "theme";
+@import "mixins";
+
+@include dialog-footer;
 
 :host ::ng-deep {
   .content {
@@ -7,15 +10,6 @@
 }
 
 .dialog-footer {
-  background-color: $color-white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  box-sizing: border-box;
-  position: sticky;
-  bottom: 0;
-  z-index: 10;
   padding-bottom: $padding-large;
 }
 
