--- a/src/app/shared/components/help-dialog/help-dialog.component.scss
+++ b/src/app/shared/components/help-dialog/help-dialog.component.scss
@@ -1,5 +1,10 @@
 @import "theme";
+@import "mixins";
+
+@include dialog-footer;
 
 .help-text-container {
   text-align: start;
+  max-height: 60vh;
+  overflow-y: auto;
 }
