--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -560,3 +560,16 @@
     gap: 8px;
   }
 }
+@mixin dialog-footer() {
+  .dialog-footer {
+    background-color: $color-white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    box-sizing: border-box;
+    position: sticky;
+    bottom: 0;
+    z-index: 10;
+  }
+}
